k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: nestjs-k8s-namespace
  name: nestjs-k8s-namespace
