k8s/03-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nestjs-k8s-namespace
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nestjs-k8s-namespace
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      # imagePullSecrets:
      #   - name: registry-secret
      containers:
        - name: api-gateway
          image: newerton/api-gateway:latest
          ports:
            - containerPort: 8000
