k8s/03-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nestjs-k8s-namespace
  name: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nestjs-k8s-namespace
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-pvc-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pvc-volume
          persistentVolumeClaim:
            claimName: mysql-pvc-volume
